@@ -7,6 +7,8 @@ Version 3.6.0
 * Generate data for new kind of sniffer plot: examination of cross-pol response
 * Print info why FITS files were split
 * New command line option:  --max-jobs: specify maximum number of jobs to combine into a single FITS file.
+* Respect env var DIFX_MAX_SNIFFER_MEMORY
+* Update --help info to print env var that are used
 
 Version 3.5.0
 * Remove duplicate RDATE keywords from AG and ML tables
